@startuml
title Class Diagram for FindItemByBinCommand Feature
skinparam classAttributeIconSize 0
hide circle
left to right direction

class "{abstract}\nCommand" as Command {
  + execute(inventory: Inventory, ui: UI)
}

class FindItemParser {
  + parse(input: String)
}

class FindItemByBinCommand {
  - binInput: String
  + execute(inventory: Inventory, ui: UI)
}

class Inventory {
  + getCategories()
}

class Category {
  - name: String
}

class Item {
  - binLocation: String
  - quantity: int
}

class UI {
  + formatNoItemsFoundMessage(...)
  + formatFoundItemsMessage(...)
  + formatFindResultsHeader(...)
  + showMessage(...)
  + showNumberedList(...)
  + showDivider()
}

Command <|-- FindItemByBinCommand
FindItemParser ..> FindItemByBinCommand : creates
FindItemByBinCommand --> Inventory : scans
FindItemByBinCommand --> UI : displays through
Inventory "1" o-- "*" Category
Category "1" o-- "*" Item
@enduml

